--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-  background-color: rgb(228, 217, 217);
+  background-color: rgb(236, 236, 241);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /*align-items: center;*/
   justify-content: center;
 }
 container {
@@ -11,38 +11,29 @@ container {
   max-width: 900px;
 }
 header {
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
-  flex-direction: column;
-  align-items: stretch;
   height: auto;
-  display: row;
+  padding-left: 255px;
+  box-shadow: rgba(0, 0, 0, 0.65) 0px 0px 10px;
 }
-.paragraphe_intro {
-  background-color: blueviolet;
+h1 {
+  text-align: left;
 }
-.paragraphe_un {
-  background-color: blueviolet;
+p h1 h2 h3 {
+  font-family: Arial;
+  font-size: 10px;
 }
-.paragraphe_deux {
+#paragraphe {
   background-color: blueviolet;
-}
-.paragraphe_trois {
-  background-color: blueviolet;
-}
-.paragraphe_quatre {
-  background-color: blueviolet;
-}
-.paragraphe_cinq {
-  background-color: blueviolet;
-}
-.pied_de_page {
-  background-color: blueviolet;
+  border-radius: 10px;
+  padding: 15px;
+  margin: 20px;
+  box-shadow: rgba(0, 0, 0, 0.65) 0px 5px 15px;
 }
 
 .bouton_rouge_haut {
   display: flex;
+  float: right;
 }
 button {
   background-color: rgb(225, 53, 53);
@@ -50,5 +41,9 @@ button {
   font-size: 10px;
   height: 30px;
   width: 120px;
+  border-radius: 10px;
+}
+.code_js {
+  background-color: aquamarine;
   border-radius: 10px;
 }
