--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(236, 236, 241);
+  background-color: rgb(233, 233, 234);
   display: flex;
   flex-direction: column;
   /*align-items: center;*/
@@ -19,12 +19,15 @@ header {
 h1 {
   text-align: left;
 }
-p h1 h2 h3 {
+p h1 h2 h3 h4 {
   font-family: Arial;
   font-size: 10px;
 }
+ul {
+  list-style-image: url(images/bullet.png);
+}
 #paragraphe {
-  background-color: blueviolet;
+  background-color: rgb(251, 251, 251);
   border-radius: 10px;
   padding: 15px;
   margin: 20px;
@@ -43,7 +46,19 @@ button {
   width: 120px;
   border-radius: 10px;
 }
+.differentes_regles {
+  margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .code_js {
-  background-color: aquamarine;
+  background-color: rgb(192, 192, 204);
   border-radius: 10px;
+  padding: 15px;
+  border: solid 1px;
+}
+.bouton_rouge_bas {
+  padding-left: 45%;
+  display: flex;
+  margin-top: 70px;
 }
