--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ ul {
   box-shadow: rgba(0, 0, 0, 0.65) 0px 5px 15px;
 }
 
+#charte {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .bouton_rouge_haut {
   display: flex;
   float: right;
