--- a/style.css
+++ b/style.css
@@ -31,12 +31,13 @@ ul {
   background-color: #eee;
   color: #444;
   cursor: pointer;
-  padding: 18px;
+  /*padding: 30px;*/
   width: 100%;
   text-align: left;
   border: none;
   outline: none;
   transition: 0.4s;
+  padding: auto;
 }
 
 .panel {
@@ -66,15 +67,24 @@ ul {
 button {
   background-color: rgb(225, 53, 53);
   color: aliceblue;
-  font-size: 10px;
+  font-size: 15px;
   height: 30px;
   width: 120px;
   border-radius: 10px;
 }
+
+#charte button {
+  font-size: 10px;
+}
+
+.bouton_rouge_bas button {
+  font-size: 10px;
+}
 .differentes_regles {
-  margin-top: 70px;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-top: 70px;
+  /*margin-left: auto;
+  margin-right: auto;*/
+  margin: 20px;
 }
 .code_js {
   background-color: rgb(192, 192, 204);
@@ -85,5 +95,5 @@ button {
 .bouton_rouge_bas {
   padding-left: 45%;
   display: flex;
-  margin-top: 70px;
+  margin: auto;
 }
