--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ container {
 header {
   display: flex;
   height: auto;
-  padding-left: 255px;
+  padding-left: 18%;
   box-shadow: rgba(0, 0, 0, 0.65) 0px 0px 10px;
 }
 #charte button {
