--- a/style.css
+++ b/style.css
@@ -13,14 +13,22 @@ container {
 header {
   display: flex;
   height: auto;
+  width: 100%;
   padding-left: 22%;
+  background-color: rgb(233, 233, 234);
   box-shadow: rgba(0, 0, 0, 0.65) 0px 0px 10px;
+  justify-content: baseline;
+  position: sticky;
+  margin: auto;
+  top: 0;
 }
+
 #charte button {
   font-size: 10px;
 }
 h1 {
-  margin-left: 65px;
+  /*margin-left: 65px;*/
+  text-align: center;
 }
 
 h2 img {
@@ -120,7 +128,6 @@ button {
 }
 
 @media only screen and (max-width: 610px) {
-  h1 {
-    font-size: 25px;
+  .titre_h1 {
   }
 }
